<resources>
    <string name="app_name">FlightMobileApp</string>
    <string name="Localhost1"> Localhost1 </string>
    <string name="Localhost2"> Localhost2 </string>
    <string name="Localhost3"> Localhost3 </string>
    <string name="Localhost4"> Localhost4 </string>
    <string name="Localhost5"> Localhost5 </string>
    <string name="connect_button"> Connect </string>
    <string name="text_menu_instructions"> Please enter an IP address, or choose an
        existing address from the list below. </string>
    <string name="hint"> Enter IP address </string>
    <string name="list_title"> Latest connections: </string>
    <string name="dotted_line"> Dotted line </string>
    <string name="background_image"> Background Image </string>
    <string name="throttle"> Throttle </string>
    <string name="rudder"> Rudder </string>
    <string name="outer_circle"> Outer Circle </string>
    <string name="inner_circle"> Inner Circle </string>
    <string name="joystick_stick"> Joystick Circle </string>
    <string name="spacer"> Prevents no direct touch movement of throttle seekbar. </string>
</resources>
